--- a/HHExplorer/HHExplorer/Views/ArticleView.xaml
+++ b/HHExplorer/HHExplorer/Views/ArticleView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="HHExplorer.MainPage">
+             x:Class="News.Views.ArticleView">
 
     <StackLayout Margin="20,35,20,20">
         <Entry x:Name="VacancyName" Placeholder="Название вакансии"/>
