--- a/HHExplorer/HHExplorer/Views/AuthPage.xaml
+++ b/HHExplorer/HHExplorer/Views/AuthPage.xaml
@@ -11,7 +11,9 @@
             <Label Text="Link HH Account" HorizontalTextAlignment="Center" 
                    TextColor="White"/>
         </Frame>
-        <Button HeightRequest="40" Margin="20,150,20,0"
+        <Button x:Name="LoginBtn"
+                HeightRequest="40" 
+                Margin="20,150,20,0"
                 BackgroundColor="White" TextColor="#2196F3" 
                 FontSize="Medium" FontAttributes="Bold"
                 Text="Login"
