--- a/HHExplorer/HHExplorer/Views/VacanciesPage.xaml
+++ b/HHExplorer/HHExplorer/Views/VacanciesPage.xaml
@@ -7,7 +7,7 @@
     xmlns:system = "clr-namespace:System;assembly=netstandard"
     Title="Safe Area"
     ios:Page.UseSafeArea="true"
-    x:Class = "News.Views.NewsPage">
+    x:Class = "News.Views.VacanciesPage">
     <StackLayout>
         <!--Button Text="Refresh" Clicked="Button_OnClicked"></Button-->
 
