--- a/HHExplorer/HHExplorer/Views/MainPage.xaml
+++ b/HHExplorer/HHExplorer/Views/MainPage.xaml
@@ -1,18 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:views="clr-namespace:News.Views" 
-             x:Class="News.Views.MainPage">
+             xmlns:views="clr-namespace:HHExplorer.Views" 
+             x:Class="HHExplorer.Views.MainPage">
+    
   <!--Pages can be added as references or inline-->
     <TabbedPage.Children>
-        <views:AuthPage Title="Auth"> </views:AuthPage>
+        <views:SettingsPage Title="Settings"> </views:SettingsPage>
         <views:VacanciesPage Title="Vacancies"></views:VacanciesPage>
         <views:ResumesPage Title="Resumes"></views:ResumesPage>
-        <!--views:NewsPage Title="General"></views:NewsPage>
-        <views:NewsPage Title="Health"></views:NewsPage>
-        <views:NewsPage Title="Science"></views:NewsPage>
-        <views:NewsPage Title="Sports"></views:NewsPage>
-        <views:NewsPage Title="Technology"></views:NewsPage-->
         <views:AboutPage Title="About"></views:AboutPage>
     </TabbedPage.Children>
 </TabbedPage>
