--- a/HHExplorer/HHExplorer.UWP/App.xaml
+++ b/HHExplorer/HHExplorer.UWP/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="News.UWP.App"
+    x:Class="HHExplorer.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:News.UWP">
+    xmlns:local="using:HHExplorer.UWP">
 
 </Application>
