--- a/HHExplorer/HHExplorer/Views/AboutPage.xaml
+++ b/HHExplorer/HHExplorer/Views/AboutPage.xaml
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="News.Views.AboutPage"
+             x:Class="HHExplorer.Views.AboutPage"
              Title="About News">
 
     <StackLayout>
         <Frame BackgroundColor="DarkBlue" Padding="24" CornerRadius="0">
-            <Label Text="HHExplorer 1.1.1 (multi-platform app)" HorizontalTextAlignment="Center" 
+            <Label Text="HHExplorer 1.1.2" HorizontalTextAlignment="Center" 
                    TextColor="White" FontSize="Large"/>
         </Frame>
         <Label Text="News in Xamarin.Forms" FontSize="Medium"/>
