--- a/HHExplorer/HHExplorer/Views/SettingsPage.xaml
+++ b/HHExplorer/HHExplorer/Views/SettingsPage.xaml
@@ -3,14 +3,33 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core"
-    x:Class="News.Views.AuthPage"
+    x:Class="HHExplorer.Views.SettingsPage"
     BackgroundColor="#2196F3"
     ios:Page.UseSafeArea="true" >
     <StackLayout>
+
+        <!-- ***** -->
         <Frame BackgroundColor="#2196F3">
-            <Label Text="Link HH Account" HorizontalTextAlignment="Center" 
+
+            <Label Text="HH Access Token" HorizontalTextAlignment="Center" 
+                TextColor="White"/>
+        </Frame>
+
+        <Button x:Name="SaveTokenBtn" 
+                        Text="Save Access Token" 
+                        Clicked="SaveTokenBtn_Clicked"/>
+
+        <Entry x:Name="TBox1" Text="" 
+            HorizontalTextAlignment="Center" 
+        />
+
+
+        <!-- ***** -->
+        <Frame BackgroundColor="#2196F3">
+            <Label Text="Welcome / Добро пожаловать" HorizontalTextAlignment="Center" 
                    TextColor="White"/>
         </Frame>
+        
         <Button x:Name="LoginBtn"
                 HeightRequest="40" 
                 Margin="20,150,20,0"
